add strategy model
